// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breaking changes rendering > should render each item under "BREAKING CHANGES:" as a separate entry in the breaking changes section 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- Some breaking change 1. <sup>[1]</sup>
- Some breaking change 2. <sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: some feature fake_2497919 ⚠️<sup>[1]</sup>

"
`;

exports[`breaking changes rendering > should use commit subject as breaking change description if no explicit "BREAKING CHANGE:..." is present 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- Some feature. <sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: some feature fake_729d2d6 ⚠️<sup>[1]</sup>

"
`;

exports[`breaking changes rendering > should use text under "BREAKING CHANGE:" as breaking change description 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- Some breaking change. <sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: some feature fake_a8a27f5 ⚠️<sup>[1]</sup>

"
`;

exports[`changelog generation > should extract changelog for latest release from file 1`] = `
"## &ensp; [\` 📦 v0.22.0  \`](https://github.com/kh4f/relion/compare/v0.21.0...v0.22.0)### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- CLI flags \`--bump\`, \`--changelog\`, \`--commit\`, and \`--tag\` have been removed. Use \`--lifecycle\` with step abbreviations instead (e.g., \`--lifecycle blmt\` or \`-f all\`). <sup>[1]</sup>
- Config options \`bump\`, \`changelog\`, \`commit\`, and \`tag\` no longer accept boolean values. Use the \`lifecycle\` array to control step execution and these options for step-specific configuration only. <sup>[1]</sup>
- The exported \`BumpFiles\` type was removed. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: apply sentence case formatting for breaking change descriptions [\`0e67566\`](https://github.com/kh4f/relion/commit/0e67566)
- **config**: add implicit "default" profile support [\`0121ff1\`](https://github.com/kh4f/relion/commit/0121ff1)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **commits-parser**: restrict \`BREAKING CHANGES\` detection to line start [\`893e5af\`](https://github.com/kh4f/relion/commit/893e5af)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **config**: replace boolean lifecycle flags with unified \`lifecycle\` array [\`b0d2d33\`](https://github.com/kh4f/relion/commit/b0d2d33) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **config**: remove \`BumpFiles\` type and use \`(string | Bumper)[]\` directly for \`bump\` instead [\`418b6ca\`](https://github.com/kh4f/relion/commit/418b6ca) ⚠️<sup>[2]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.21.0...v0.22.0) &ensp;•&ensp; _Oct 14, 2025_


"
`;

exports[`changelog generation > should extract changelog for latest release from file and remove commit and ref links 1`] = `
"## &ensp;  📦 v0.22.0  ### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- CLI flags \`--bump\`, \`--changelog\`, \`--commit\`, and \`--tag\` have been removed. Use \`--lifecycle\` with step abbreviations instead (e.g., \`--lifecycle blmt\` or \`-f all\`). <sup>[1]</sup>
- Config options \`bump\`, \`changelog\`, \`commit\`, and \`tag\` no longer accept boolean values. Use the \`lifecycle\` array to control step execution and these options for step-specific configuration only. <sup>[1]</sup>
- The exported \`BumpFiles\` type was removed. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: apply sentence case formatting for breaking change descriptions 0e67566
- **config**: add implicit "default" profile support 0121ff1

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **commits-parser**: restrict \`BREAKING CHANGES\` detection to line start 893e5af

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **config**: replace boolean lifecycle flags with unified \`lifecycle\` array b0d2d33 ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **config**: remove \`BumpFiles\` type and use \`(string | Bumper)[]\` directly for \`bump\` instead 418b6ca ⚠️<sup>[2]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; _All Release Commits_ &ensp;•&ensp; _Oct 14, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.7.0' 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.7.0  \`](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add \`defaultChangelogSections\` export [\`86da78a\`](https://github.com/kh4f/relion/commit/86da78a)
- **changelog**: extend section definitions with optional \`id\` property [\`41c838a\`](https://github.com/kh4f/relion/commit/41c838a)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **templates**: use \`id\` property instead of \`commitType\` for breaking changes condition [\`205b9f8\`](https://github.com/kh4f/relion/commit/205b9f8)
- **defaults**: update \`prevReleaseTagPattern\` regex to allow optional leading \`v\` [\`1c631eb\`](https://github.com/kh4f/relion/commit/1c631eb)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;📚 Documentation
- **commit-naming**: update commit message guidelines with clarified rules and examples [\`94ca4fc\`](https://github.com/kh4f/relion/commit/94ca4fc)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **changelog**: update title for default \`style\` section from 'Formatting' to 'Style' [\`d47d472\`](https://github.com/kh4f/relion/commit/d47d472)
- **templates**: 
  - remove emoji from footer commit link [\`7ea3c1d\`](https://github.com/kh4f/relion/commit/7ea3c1d)
  - update release footer with italic link and \`•\` separator [\`7e56b38\`](https://github.com/kh4f/relion/commit/7e56b38)
  - simplify release footer by omitting \`prevTag → tag\` [\`df84af2\`](https://github.com/kh4f/relion/commit/df84af2)
  - update footer link label to 'All Release Commits' [\`2ca80a6\`](https://github.com/kh4f/relion/commit/2ca80a6)
  - update commit scope formatting to bold with colon [\`37dcb53\`](https://github.com/kh4f/relion/commit/37dcb53)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🛠️ Chores
- **renovate**: add initial configuration for Renovate [\`bc296e9\`](https://github.com/kh4f/relion/commit/bc296e9)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0) &ensp;•&ensp; _Sep 11, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.7.0' without scope groups 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.7.0  \`](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add \`defaultChangelogSections\` export [\`86da78a\`](https://github.com/kh4f/relion/commit/86da78a)
- **changelog**: extend section definitions with optional \`id\` property [\`41c838a\`](https://github.com/kh4f/relion/commit/41c838a)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **templates**: use \`id\` property instead of \`commitType\` for breaking changes condition [\`205b9f8\`](https://github.com/kh4f/relion/commit/205b9f8)
- **defaults**: update \`prevReleaseTagPattern\` regex to allow optional leading \`v\` [\`1c631eb\`](https://github.com/kh4f/relion/commit/1c631eb)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;📚 Documentation
- **commit-naming**: update commit message guidelines with clarified rules and examples [\`94ca4fc\`](https://github.com/kh4f/relion/commit/94ca4fc)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **changelog**: update title for default \`style\` section from 'Formatting' to 'Style' [\`d47d472\`](https://github.com/kh4f/relion/commit/d47d472)
- **templates**: remove emoji from footer commit link [\`7ea3c1d\`](https://github.com/kh4f/relion/commit/7ea3c1d)
- **templates**: update release footer with italic link and \`•\` separator [\`7e56b38\`](https://github.com/kh4f/relion/commit/7e56b38)
- **templates**: simplify release footer by omitting \`prevTag → tag\` [\`df84af2\`](https://github.com/kh4f/relion/commit/df84af2)
- **templates**: update footer link label to 'All Release Commits' [\`2ca80a6\`](https://github.com/kh4f/relion/commit/2ca80a6)
- **templates**: update commit scope formatting to bold with colon [\`37dcb53\`](https://github.com/kh4f/relion/commit/37dcb53)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🛠️ Chores
- **renovate**: add initial configuration for Renovate [\`bc296e9\`](https://github.com/kh4f/relion/commit/bc296e9)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0) &ensp;•&ensp; _Sep 11, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.8.0' 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: 
  - change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
  - rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


"
`;

exports[`changelog generation > should generate changelog for release 'v0.8.0' without scope groups 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
- **changelog**: rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


"
`;

exports[`changelog generation > should generate changelog with release changelog URL in footer 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`versionSourceFile\` is no longer automatically included in the \`bump\` array (but still is if \`bump\` is \`true\`). <sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;♻️ Reverts
- **config**: allow skipping bump for \`versionSourceFile\` via \`!versionSourceFile\` in \`bump\` array [\`0ac5ff0\`](https://github.com/kh4f/relion/commit/0ac5ff0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **config**: require explicit \`versionSourceFile\` inclusion in \`bump\` array [\`fd5ad3c\`](https://github.com/kh4f/relion/commit/fd5ad3c) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **ci/release**: inline \`with\` block for Node.js setup step [\`a0d7905\`](https://github.com/kh4f/relion/commit/a0d7905)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🧪 Tests
- **changelog**: 
  - skip test for generating changelog with transformed partials [\`9c064b7\`](https://github.com/kh4f/relion/commit/9c064b7)
  - update snapshot for transformed partials test [\`67ed389\`](https://github.com/kh4f/relion/commit/67ed389)
  - update snapshot for changelog generation tests [\`a9dc9a2\`](https://github.com/kh4f/relion/commit/a9dc9a2)
- **bump**: add test for bumping version in \`manifest.json\` [\`f2646f3\`](https://github.com/kh4f/relion/commit/f2646f3)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚀 CI
- **checks**: improve comment clarity for commit history fetching [\`d787525\`](https://github.com/kh4f/relion/commit/d787525)
- **workflows**: update lint step to use \`lint:fix\` script [\`1aff340\`](https://github.com/kh4f/relion/commit/1aff340)
- **release**: add linting and testing steps to release workflow [\`b61b08d\`](https://github.com/kh4f/relion/commit/b61b08d)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🧩 Dependencies
- **dev-deps**: bump \`lint-staged\` from 16.2.1 to 16.2.3 (#9) [\`0ae604d\`](https://github.com/kh4f/relion/commit/0ae604d)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🛠️ Chores
- **renovate**: replace \`matchCurrentAge\` with \`minimumReleaseAge\` for patch and minor updates [\`9471d0d\`](https://github.com/kh4f/relion/commit/9471d0d)

##### &emsp;&ensp;&nbsp;&nbsp; [_Release Changelog_](https://github.com/kh4f/relion/blob/main/CHANGELOG.md#--v0180-) &ensp;•&ensp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; _Oct 2, 2025_


"
`;

exports[`changelog generation > should generate changelog with scope groups for custom commits 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- unscoped commit 2 fake_269b30b
- unscoped commit 1 fake_b86c57f
- **scope 2**: 
  - scoped commit 3 fake_728ea8b
  - scoped commit 2 fake_fdf4bef
- **scope 1**: scoped commit 1 fake_1bf47c1

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- unscoped commit 3 fake_923cc1a

"
`;

exports[`changelog generation > should generate changelog with selected and modified sections 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.7.0  \`](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎁 New Features
- **core**: add \`defaultChangelogSections\` export [\`86da78a\`](https://github.com/kh4f/relion/commit/86da78a)
- **changelog**: extend section definitions with optional \`id\` property [\`41c838a\`](https://github.com/kh4f/relion/commit/41c838a)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **templates**: use \`id\` property instead of \`commitType\` for breaking changes condition [\`205b9f8\`](https://github.com/kh4f/relion/commit/205b9f8)
- **defaults**: update \`prevReleaseTagPattern\` regex to allow optional leading \`v\` [\`1c631eb\`](https://github.com/kh4f/relion/commit/1c631eb)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.6.0...v0.7.0) &ensp;•&ensp; _Sep 11, 2025_


"
`;

exports[`changelog sections rendering > should ignore changelog line limit for the first section when show defaults to "limit-or-breaking" 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎁 New Features
- **core**: 
  - some feature 1 fake_83d342e
  - some feature 2 fake_bc7a9a6 ⚠️<sup>[1]</sup>
  - some feature 3 fake_2dc5694

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; __


"
`;

exports[`changelog sections rendering > should keep commits with breaking changes when maxLinesPerRelease is exceeded 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- Some breaking change. <sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: some feature fake_4271cd6

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **core**: some bugfix fake_5087d7d

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚡ Performance
- **core**: some performance improvement fake_27db403

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;♻️ Reverts
- **core**: some revert fake_8bf8ff8

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🛠️ Chores
- **core**: some chore fake_678a37e ⚠️<sup>[1]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; __


"
`;

exports[`changelog sections rendering > should keep sections with show="always" despite changelog line limit 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: 
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6
  - some feature fake_4271cd6

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **core**: 
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d
  - some bugfix fake_5087d7d

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚡ Performance
- **core**: some performance improvement fake_27db403

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;♻️ Reverts
- **core**: some revert fake_8bf8ff8

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; __


"
`;

exports[`changelog sections rendering > should limit changelog to 10 lines for release v0.17.0 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.17.0  \`](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`VersionedFile\` type now uses \`file\` and \`pattern\` properties instead of \`filePath\` and \`versionPattern\`. <sup>[1]</sup>
- The \`silent\` option has been removed. Use \`logLevel\` instead to control logging verbosity. <sup>[2]</sup>
- The \`bumpResults\` property is no longer returned by the main \`relion()\` function. <sup>[3]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: add function support for \`partials\` to transform fallback content [\`7f070fd\`](https://github.com/kh4f/relion/commit/7f070fd)
- **bump**: add support for custom replacement for versioned files [\`77aa591\`](https://github.com/kh4f/relion/commit/77aa591)
- **config**: 
  - allow skipping bump for \`versionSourceFile\` via \`!versionSourceFile\` in \`bump\` array [\`ba77ad8\`](https://github.com/kh4f/relion/commit/ba77ad8)
  - support extracting current version from latest release tag instead of file [\`9d96a36\`](https://github.com/kh4f/relion/commit/9d96a36)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **config-resolver**: preserve all default versioned file attributes when matching custom file [\`33aa299\`](https://github.com/kh4f/relion/commit/33aa299)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **config**: 
  - rename \`filePath\` and \`versionPattern\` to \`file\` and \`pattern\` [\`88f1446\`](https://github.com/kh4f/relion/commit/88f1446) ⚠️<sup>[1]</sup>
  - replace \`silent\` option with \`logLevel\` for improved logging control [\`9cfb8af\`](https://github.com/kh4f/relion/commit/9cfb8af) ⚠️<sup>[2]</sup>
- **core**: remove \`bumpResults\` from \`relion()\` return values [\`0626642\`](https://github.com/kh4f/relion/commit/0626642) ⚠️<sup>[3]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0) &ensp;•&ensp; _Sep 28, 2025_


"
`;

exports[`changelog sections rendering > should limit changelog to 20 lines for release v0.17.0 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.17.0  \`](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`VersionedFile\` type now uses \`file\` and \`pattern\` properties instead of \`filePath\` and \`versionPattern\`. <sup>[1]</sup>
- The \`silent\` option has been removed. Use \`logLevel\` instead to control logging verbosity. <sup>[2]</sup>
- The \`bumpResults\` property is no longer returned by the main \`relion()\` function. <sup>[3]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: add function support for \`partials\` to transform fallback content [\`7f070fd\`](https://github.com/kh4f/relion/commit/7f070fd)
- **bump**: add support for custom replacement for versioned files [\`77aa591\`](https://github.com/kh4f/relion/commit/77aa591)
- **config**: 
  - allow skipping bump for \`versionSourceFile\` via \`!versionSourceFile\` in \`bump\` array [\`ba77ad8\`](https://github.com/kh4f/relion/commit/ba77ad8)
  - support extracting current version from latest release tag instead of file [\`9d96a36\`](https://github.com/kh4f/relion/commit/9d96a36)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **config-resolver**: preserve all default versioned file attributes when matching custom file [\`33aa299\`](https://github.com/kh4f/relion/commit/33aa299)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **utils**: extract \`hbs-load-hook\` to separate module to avoid registration conflict [\`88c6fea\`](https://github.com/kh4f/relion/commit/88c6fea)
- **release**: update relion config to use 'logLevel' [\`591e2c8\`](https://github.com/kh4f/relion/commit/591e2c8)
- **config**: 
  - rename \`filePath\` and \`versionPattern\` to \`file\` and \`pattern\` [\`88f1446\`](https://github.com/kh4f/relion/commit/88f1446) ⚠️<sup>[1]</sup>
  - replace \`silent\` option with \`logLevel\` for improved logging control [\`9cfb8af\`](https://github.com/kh4f/relion/commit/9cfb8af) ⚠️<sup>[2]</sup>
- **logger**: remove unused \`deepLog\` function [\`9c0b9a2\`](https://github.com/kh4f/relion/commit/9c0b9a2)
- **commits-parser**: replace \`console.warn\` with \`warn\` utility function [\`9982505\`](https://github.com/kh4f/relion/commit/9982505)
- **core**: remove \`bumpResults\` from \`relion()\` return values [\`0626642\`](https://github.com/kh4f/relion/commit/0626642) ⚠️<sup>[3]</sup>
- **vitest**: use \`silent: true\` in config instead of mocking \`console.log\` [\`9cb40a7\`](https://github.com/kh4f/relion/commit/9cb40a7)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎨 Style
- **config-resolver**: add quotes around \`versionSourceFile.file\` in log output [\`7f08be2\`](https://github.com/kh4f/relion/commit/7f08be2)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🧪 Tests
- **changelog**: wrap tests for partials customization in dedicated describe block [\`7272cf7\`](https://github.com/kh4f/relion/commit/7272cf7)
- **fixtures**: add fixture files for \`manifest.json\`, \`package.json\`, and \`versions.json\` [\`dc46f7c\`](https://github.com/kh4f/relion/commit/dc46f7c)
- **setup**: mock \`defaults\` module for configurable \`dryRun\` and \`changelog.output\` in tests [\`c7ba9dc\`](https://github.com/kh4f/relion/commit/c7ba9dc)

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.16.0...v0.17.0) &ensp;•&ensp; _Sep 28, 2025_


"
`;

exports[`changelog sections rendering > should only show breaking commits for sections with show="only-breaking" 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎁 New Features
- **core**: some feature 2 fake_bc7a9a6 ⚠️<sup>[1]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; __


"
`;

exports[`changelog sections rendering > should show only breaking commits for sections exceeding line limit when show defaults to "limit-or-breaking" 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎁 New Features
- **core**: 
  - some feature 1 fake_83d342e
  - some feature 2 fake_4b80455 ⚠️<sup>[1]</sup>
  - some feature 3 fake_2dc5694

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🐛 Bug Fixes
- **core**: some bugfix 2 fake_a80066b ⚠️<sup>[2]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; __


"
`;

exports[`changelog sections rendering > should skip sections with show="never" 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.18.0  \`](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🎁 New Features
- **core**: some feature fake_4271cd6

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.17.1...v0.18.0) &ensp;•&ensp; __


"
`;

exports[`commit references rendering > should render commit references as hyperlinks 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add new feature [\`123456b\`](https://github.com/kh4f/relion/commit/123456b) ([#20](https://github.com/kh4f/relion/issues/20), [kh4f/relion#30](https://github.com/kh4f/relion/issues/30))

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **core**: fix bug [\`123456a\`](https://github.com/kh4f/relion/commit/123456a) ([#10](https://github.com/kh4f/relion/issues/10))

"
`;

exports[`commit references rendering > should render commit references as plain text 1`] = `
"### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **core**: add new feature 123456b (#20, kh4f/relion#30)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **core**: fix bug 123456a (#10)

"
`;

exports[`partials customization > should generate changelog with customized partials 1`] = `"CUSTOM FOOTER --- **This is a custom partial** ---"`;

exports[`partials customization > should generate changelog with transformed footer and custom changelog URL partial 1`] = `
"# Changelog


## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: 
  - change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
  - rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

##### &emsp;&ensp;&nbsp;&nbsp; [_Release Changelog_](https://github.com/kh4f/relion/blob/main/CHANGELOG.md) &ensp;•&ensp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


"
`;

exports[`partials customization > should generate changelog with transformed partials 1`] = `
"# Changelog


CUSTOM HEADER---## &ensp; [\` 📦 v0.8.0  \`](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0)

---### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- The \`defaultChangelogSections\` export has been removed from the public API. Use \`changelogSectionsSelector\` instead, which provides the same sections plus \`pick\` and \`omit\` methods. <sup>[1]</sup>
- The \`sections\` option in changelog configuration is now an object with section IDs as keys instead of an array. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **utils**: add \`changelogSectionsSelector\` with \`pick\` and \`omit\` methods [\`3febcbc\`](https://github.com/kh4f/relion/commit/3febcbc) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **changelog**: 
  - change \`sections\` from array to object format for better usability [\`349fed9\`](https://github.com/kh4f/relion/commit/349fed9) ⚠️<sup>[2]</sup>
  - rename \`commitGroups\` property to \`commitTypeGroups\` [\`6ec89a8\`](https://github.com/kh4f/relion/commit/6ec89a8)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **defaults**: use \`satisfies ChangelogSectionsMap\` for \`defaultChangelogSections\` [\`4343e6f\`](https://github.com/kh4f/relion/commit/4343e6f)

CUSTOM FOOTER---##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.7.0...v0.8.0) &ensp;•&ensp; _Sep 12, 2025_


---"
`;

exports[`partials extraction > should extract body partial for latest release from changelog file 1`] = `
"## &ensp; [\` 📦 v0.22.0  \`](https://github.com/kh4f/relion/compare/v0.21.0...v0.22.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- CLI flags \`--bump\`, \`--changelog\`, \`--commit\`, and \`--tag\` have been removed. Use \`--lifecycle\` with step abbreviations instead (e.g., \`--lifecycle blmt\` or \`-f all\`). <sup>[1]</sup>
- Config options \`bump\`, \`changelog\`, \`commit\`, and \`tag\` no longer accept boolean values. Use the \`lifecycle\` array to control step execution and these options for step-specific configuration only. <sup>[1]</sup>
- The exported \`BumpFiles\` type was removed. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: apply sentence case formatting for breaking change descriptions [\`0e67566\`](https://github.com/kh4f/relion/commit/0e67566)
- **config**: add implicit "default" profile support [\`0121ff1\`](https://github.com/kh4f/relion/commit/0121ff1)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **commits-parser**: restrict \`BREAKING CHANGES\` detection to line start [\`893e5af\`](https://github.com/kh4f/relion/commit/893e5af)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **config**: replace boolean lifecycle flags with unified \`lifecycle\` array [\`b0d2d33\`](https://github.com/kh4f/relion/commit/b0d2d33) ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **config**: remove \`BumpFiles\` type and use \`(string | Bumper)[]\` directly for \`bump\` instead [\`418b6ca\`](https://github.com/kh4f/relion/commit/418b6ca) ⚠️<sup>[2]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.21.0...v0.22.0) &ensp;•&ensp; _Oct 16, 2025_


"
`;

exports[`partials extraction > should extract body partial for latest release from changelog file and remove commit and reference links from body 1`] = `
"## &ensp; [\` 📦 v0.22.0  \`](https://github.com/kh4f/relion/compare/v0.21.0...v0.22.0)

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⚠️ BREAKING CHANGES
- CLI flags \`--bump\`, \`--changelog\`, \`--commit\`, and \`--tag\` have been removed. Use \`--lifecycle\` with step abbreviations instead (e.g., \`--lifecycle blmt\` or \`-f all\`). <sup>[1]</sup>
- Config options \`bump\`, \`changelog\`, \`commit\`, and \`tag\` no longer accept boolean values. Use the \`lifecycle\` array to control step execution and these options for step-specific configuration only. <sup>[1]</sup>
- The exported \`BumpFiles\` type was removed. <sup>[2]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ Features
- **changelog**: apply sentence case formatting for breaking change descriptions 0e67566
- **config**: add implicit "default" profile support 0121ff1

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🩹 Fixes
- **commits-parser**: restrict \`BREAKING CHANGES\` detection to line start 893e5af

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🚜 Refactoring
- **config**: replace boolean lifecycle flags with unified \`lifecycle\` array b0d2d33 ⚠️<sup>[1]</sup>

### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🏷️ Types
- **config**: remove \`BumpFiles\` type and use \`(string | Bumper)[]\` directly for \`bump\` instead 418b6ca ⚠️<sup>[2]</sup>

##### &emsp;&ensp;&nbsp;&nbsp; [_Release Changelog_](https://github.com/kh4f/relion/blob/main/CHANGELOG.md#--v0220-) &ensp;•&ensp; [_All Release Commits_](https://github.com/kh4f/relion/compare/v0.21.0...v0.22.0) &ensp;•&ensp; _Oct 16, 2025_


"
`;
